Legg til rette for liste med mottakerIder i opprett BUC